Fix jumps on the layout when add or delete items on Swapy component

--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@
 
 body {
 	display: grid;
-	grid-template-rows: 0.1fr auto 0.4fr;
+	grid-template-rows: 0.1fr 0.5fr 0.4fr;
 	width: 100vw;
 	height: 100vh;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
